[package]
name = "miuturn"
version = "0.1.2"
edition = "2024"
description = "A high-performance TURN server implemented in Rust, designed for WebRTC applications."
authors = ["jinti<shenjindi@fourz.cn>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
async-trait = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
tower-http = { version = "0.6", features = ["cors"] }
hmac = "0.13.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
md5 = "0.8.0"
hex = "0.4"
base64 = "0.22"

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
pem = "3"
rcgen = "0.14.7"

# Prometheus metrics (custom implementation)
prometheus = "0.14.0"

# Time utilities
time = "0.3"

# CPU detection for worker pool sizing
num_cpus = "0.2"

# Session management for admin console
axum-extra = { version = "0.9", features = ["cookie"] }

[dev-dependencies]
stun = "0.17.1"
turn = "0.17.1"
tokio-test = "0.4"
tower = "0.5"
anyhow = "1"
webrtc-util = "0.17.1"
futures = "0.3"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
